--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lite": "lite-server",
     "less": "lessc css/styles.less css/styles.css",
     "watch:css": "onchange 'css/*.less' -- npm run less",
-    "watch:all": "parallelshell 'npm run watch:css' 'npm run lite'"
+    "watch:all": "parallelshell 'npm run watch:css' 'npm run lite'",
+    "clean": "rimraf dist",
+    "copyfonts": "copyfiles -f node_modules/font-awesome/fonts/* dist/fonts",
+    "imagemin": "imagemin images/* -o dist/images",
+    "usemin": "usemin index.html -d dist --htmlmin -o dist/index.html",
+    "build": "npm run clean && npm run copyfonts && npm run imagemin && npm run usemin"
   },
   "author": "alejito",
   "license": "ISC",
   "devDependencies": {
+    "cssmin": "^0.4.3",
+    "htmlmin": "^0.0.7",
     "lite-server": "^2.6.1",
     "onchange": "^3.3.0",
-    "parallelshell": "^3.0.1"
+    "parallelshell": "^3.0.1",
+    "rimraf": "^2.6.2",
+    "uglifyjs": "^2.4.11",
+    "usemin-cli": "^0.5.1"
   },
   "dependencies": {
     "bootstrap": "^4.0.0",
